--- a/src/Kendoctor/Bundle/DocumentorBundle/Resources/views/Space/spaceLayout.html.twig
+++ b/src/Kendoctor/Bundle/DocumentorBundle/Resources/views/Space/spaceLayout.html.twig
@@ -23,6 +23,7 @@
                     <div class="navbar-inner">
                         <a class="brand" href="#">Felyhosan documentor platform</a>
                         <ul class="nav">
+                            <li ><a href="{{ path('home') }}">Home</a></li>
                             <li class="active"><a href="">My Space</a></li>
                             <li><a href="#">Link</a></li>
                             <li><a href="#">Link</a></li>
