--- a/src/Kendoctor/Bundle/DocumentorBundle/Resources/views/Document/edit.html.twig
+++ b/src/Kendoctor/Bundle/DocumentorBundle/Resources/views/Document/edit.html.twig
@@ -1,29 +1,78 @@
 {% extends 'KendoctorDocumentorBundle:Space:spaceLayout.html.twig' %}
 
 {% block body -%}
-    <h1>Document edit</h1>
 
-    <form class="document-form" action="{{ path('document_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-        <input type="hidden" name="_method" value="PUT" />
-        {{ form_widget(edit_form) }}
-        <div id="doc"></div>
+<h1>Current Version: {{version.version}}, {{ currentLang }}</h1>
+
+<div class="container-fluid">
+  
+    
+    <div class="span10">
         <p>
-            <button type="submit" class="btn">Save Document</button>
-            <button type="submit" class="btn btn-primary">Save And Publish</button>
-            <button type="submit" class="btn btn-danger">Delete</button>
-           
-        </p>
-    </form>
+        {% for lang in langs %}
 
-        <script>
-            $(function() {
+                <a class="btn {% if currentLang == lang.lang %} btn-inverse {% endif %}" href="">{{ lang.lang }}</a> 
+        {% endfor %}
+            </p>
+            <p>
+        {% for log in entity.versionLogs %}
+            {% if log.isReleased %}
+                    <a class="btn {%if log.id == version.id %} btn-primary {% elseif log.isReleased %} btn-info {% endif %}" href="{{ path('document_edit', {'versionId' : log.id }) }}">{{ log.version }}</a> 
+            {% endif %}            
+        {% endfor %}
 
-                $("#doc").kendocumentor({
-                    titleFieldSelector: '#kendoctor_bundle_documentorbundle_documenttype_title',
-                    bodyFieldSelector: '#kendoctor_bundle_documentorbundle_documenttype_body',
-                    formSelector: '.document-form'
-                });
-            });
-            </script>
+                </p>
+                
+                
+                <form class="document-form" action="{{ path('document_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+                <input type="hidden" name="_method" value="PUT" />
+        {{ form_widget(edit_form) }}
+                <div id="doc"></div>
+                <p>
+                    <button type="submit" class="btn">Save Document</button>
+            {% if version.isReleased %}
+                    <a class="disabled btn">Release a new Version</a>
+            {% else %}
+                    
+            {% endif %}
+                    <a class="btn" href={{ path('document_select_translate_language', {'versionId': version.id }) }}>Translate Document</a>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+
+                </p>
+            </form>
+            </div>
+
+     
+         <div class="span2 pull-right">
+            <h4>History<i>(you can only have 5 history records)</i></h4>
+            <ol class="nav nav-list">
+               
+            {% for log in entity.versionLogs %}
+                    
+{% if not log.isReleased %}
+             <li>       
+               <p>  <a class="  {%if log.id == version.id %}  {% endif %}" href="{{ path('document_edit', {'versionId' : log.id }) }}">{{ log.version }}</a> 
+                 <a href="{{ path('document_release_version', { versionId: log.id }) }}" class="">Release</a>
+                 <a href="{{ path('document_release_version', { versionId: log.id }) }}" class="" title="Delete this history"><i class="icon-remove-circle"></i></a></p>
+             </li>
+ {% endif %}              {% endfor %}
+                </ol>
+            </div>
+</div>
+
             
+
+
+
+            <script>
+                $(function() {
+
+                    $("#doc").kendocumentor({
+                        titleFieldSelector: '#kendoctor_bundle_documentorbundle_documenttype_title',
+                        bodyFieldSelector: '#kendoctor_bundle_documentorbundle_documenttype_body',
+                        formSelector: '.document-form'
+                    });
+                });
+                </script>
+
 {% endblock %}
